update entropy_toolbox.f90, add memory management to avoid segment fault 11

--- a/src/tools/hibiscus/entropy1/old_source/Makefile
+++ b/src/tools/hibiscus/entropy1/old_source/Makefile
@@ -26,7 +26,7 @@
 
 .SUFFIXES: .f90
 
-include ../../../build/make.sys
+include ../../../../build/make.sys
 
 modc = entropy_control.o entropy_context.o
 core = entropy_stream.o entropy_toolbox.o entropy_update.o
@@ -41,14 +41,14 @@ default: all
 all: exe
 
 cssl:
-	cp ../../../common/libMM.a .
+	cp ../../../../common/libMM.a .
 
 csml:
-	cp ../../../common/constants.mod .
-	cp ../../../common/mmpi.mod .
-	cp ../../../common/spring.mod .
-	cp ../../../common/parser.mod .
-	cp ../../../common/linkedlist.mod .
+	cp ../../../../common/constants.mod .
+	cp ../../../../common/mmpi.mod .
+	cp ../../../../common/spring.mod .
+	cp ../../../../common/parser.mod .
+	cp ../../../../common/linkedlist.mod .
 
 exe: cssl csml entropy-exe
 entropy-exe: $(objects)
