modify .gitignore, refine it

--- a/.gitignore
+++ b/.gitignore
@@ -12,20 +12,25 @@
 *.log
 *.out
 *.pyf
+*.pyc
 *.optrpt
-atom.cix
-fort.*
-test.f90
-py_api.f90
-src/ctqmc/*/ctqmc
-sac
-mchi
-mdos
-mkra
-mscr
-msig
-mstd
-mtau
-mups
-atomic
 .DS_Store
+fort.*
+solver.ctqmc.in
+atom.config.in
+atom.cix
+test.py
+test.f90
+ctqmc_api_py.f90
+src/ctqmc/*/ctqmc
+src/tools/hibiscus/entropy/entropy
+src/tools/hibiscus/stoch/sac
+src/tools/hibiscus/toolbox/mchi
+src/tools/hibiscus/toolbox/mdos
+src/tools/hibiscus/toolbox/mkra
+src/tools/hibiscus/toolbox/mscr
+src/tools/hibiscus/toolbox/msig
+src/tools/hibiscus/toolbox/mstd
+src/tools/hibiscus/toolbox/mtau
+src/tools/hibiscus/toolbox/mups
+src/tools/jasmine/atomic
