--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -61,10 +61,10 @@ atomic-lib: $(objects)
 	$(ARCHIVER) libatomic.a $(objects)
 
 f2py:
-	fpp -P -DF2PY atomic_api.f90 > py_api.f90
+	fpp -P -DF2PY atomic_api.f90 > atomic_api_py.f90
 
 pyjasmine: f2py lib
-	f2py -c --fcompiler=intelem py_api.f90 -m pyjasmine -L. -latomic -lMM $(LIBS)
+	f2py -c --fcompiler=intelem atomic_api_py.f90 -m pyjasmine -L. -latomic -lMM $(LIBS)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -76,7 +76,7 @@ clean:
 	rm -f atomic
 	rm -f libatomic.a
 	rm -f libMM.a
-	rm -f py_api.f90
+	rm -f atomic_api_py.f90
 
 clean-dat:
 	rm -f *.cix
