update the ctqmc/standard directory

--- a/working/ctqmc/standard/1c/atom.config.in
+++ b/working/ctqmc/standard/1c/atom.config.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : 1c/atom.config.in
-!!! solver  : begonia, lavender, pansy and manjushaka
+!!! solver  : BEGONIA, LAVENDER, PANSY, and MANJUSHAKA
 !!! purpose : to test ctqmc impurity solver
 !!! author  : yilin wang (qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
