--- a/working/tools/jasmine/2f/atom.config.in
+++ b/working/tools/jasmine/2f/atom.config.in
@@ -1,21 +1,21 @@
 !!!-----------------------------------------------------------------------
 !!! source  : atom.config.in
-!!! solver  : jasmine
-!!! purpose : to test the atomic solver 
-!!! author  : yilin wang (qhwyl2006@126.com)
+!!! solver  : JASMINE
+!!! purpose : to test the atomic solver
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
 !!------------------------------------------------------------------------
 ! number of bands
-  nband  : 2       
+  nband  : 2
 
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
-  ictqmc : 2       
+  ictqmc : 2
 
 ! type of crystal field splitting
-! (0) without, (1) diagonal, (2) non-diagonal 
+! (0) without, (1) diagonal, (2) non-diagonal
   icf    : 1
 
 ! type of Coulomb interaction: (1) Kanamori (2) Slater
