--- a/working/tools/jasmine/5h/atom.config.in
+++ b/working/tools/jasmine/5h/atom.config.in
@@ -1,14 +1,14 @@
 !!!-----------------------------------------------------------------------
 !!! source  : atom.config.in
-!!! solver  : jasmine
-!!! purpose : to test the atomic solver 
-!!! author  : yilin wang (qhwyl2006@126.com)
+!!! solver  : JASMINE
+!!! purpose : to test the atomic solver
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
 !!------------------------------------------------------------------------
 ! number of bands
-  nband  : 5       
+  nband  : 5
 
 ! where to make natural basis
 ! (1) inside the atomic program, (2) outside
@@ -16,7 +16,7 @@
 
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
-  ictqmc : 2       
+  ictqmc : 2
 
 ! type of spin-orbit coupling (SOC)
 ! (0) without, (1) with atomic SOC
