--- a/working/tools/jasmine/5k/atom.config.in
+++ b/working/tools/jasmine/5k/atom.config.in
@@ -1,14 +1,14 @@
 !!!-----------------------------------------------------------------------
 !!! source  : atom.config.in
-!!! solver  : jasmine
-!!! purpose : to test the atomic solver 
-!!! author  : yilin wang (qhwyl2006@126.com)
+!!! solver  : JASMINE
+!!! purpose : to test the atomic solver
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
 !!------------------------------------------------------------------------
 ! number of bands
-  nband  : 5       
+  nband  : 5
 
 ! minimal and maximal occupancy to be kept
   nmini  : 3
@@ -16,10 +16,10 @@
 
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
-  ictqmc : 2       
+  ictqmc : 2
 
 ! type of crystal field splitting
-! (0) without, (1) diagonal, (2) non-diagonal 
+! (0) without, (1) diagonal, (2) non-diagonal
   icf    : 1
 
 ! type of spin-orbit coupling (SOC)
