--- a/working/tools/jasmine/7a/atom.config.in
+++ b/working/tools/jasmine/7a/atom.config.in
@@ -1,14 +1,14 @@
 !!!-----------------------------------------------------------------------
 !!! source  : atom.config.in
-!!! solver  : jasmine
-!!! purpose : to test the atomic solver 
-!!! author  : yilin wang (qhwyl2006@126.com)
+!!! solver  : JASMINE
+!!! purpose : to test the atomic solver
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
 !!------------------------------------------------------------------------
 ! number of bands
-  nband  : 7       
+  nband  : 7
 
 ! minimal and maximal occupancy to be kept
   nmini  : 0
@@ -16,7 +16,7 @@
 
 ! good quantum numbers (GQNs)
 ! (1) without any GQNs, (2) N, (3) N,Sz, (4) N,Sz,PS, (5) N,Jz
-  ictqmc : 3       
+  ictqmc : 3
 
 ! type of Coulomb interaction: (1) Kanamori (2) Slater
   icu    : 2
