--- a/working/ctqmc/advanced/lavender/3j3/atom.config.in
+++ b/working/ctqmc/advanced/lavender/3j3/atom.config.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : 3j3/atom.config.in
-!!! solver  : MANJUSHAKA
+!!! solver  : lavender
 !!! purpose : to test ctqmc impurity solver
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
@@ -8,7 +8,7 @@
 !!>>> setup general control flags
 !!------------------------------------------------------------------------
   ibasis : 1
-  ictqmc : 4
+  ictqmc : 1
   icu    : 1
   icf    : 0
   isoc   : 0
