rename F2PY FLAG in Makefile and ctqmc_api.f90

--- a/src/ctqmc/api/Makefile
+++ b/src/ctqmc/api/Makefile
@@ -37,7 +37,7 @@ all: build_mod
 build_mod: $(mod)
 
 f2py:
-	fpp -P -DF2PY ctqmc_api.f90 > ctqmc_api_py.f90
+	fpp -P -DMPY ctqmc_api.f90 > ctqmc_api_py.f90
 
 libctqmc:
 	cp ../azalea/libctqmc.a .
