--- a/working/ctqmc/advanced/begonia/3c2/solver.ctqmc.in
+++ b/working/ctqmc/advanced/begonia/3c2/solver.ctqmc.in
@@ -2,7 +2,7 @@
 !!! source  : 3c2/solver.ctqmc.in
 !!! solver  : BEGONIA
 !!! purpose : to test ctqmc impurity solver
-!!! purpose : to test ctqmc impurity solver
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 !!!-----------------------------------------------------------------------
 
