update the tutor directory

--- a/tutor/t912/u60/solver.ctqmc.in
+++ b/tutor/t912/u60/solver.ctqmc.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t912/u60/solver.ctqmc.in
-!!! solver  : azalea
+!!! solver  : AZALEA
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
