--- a/tutor/t921/solver.ctqmc.in
+++ b/tutor/t921/solver.ctqmc.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t921/solver.ctqmc.in
-!!! solver  : begonia
+!!! solver  : BEGONIA
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
