--- a/tutor/t922/atom.config.in
+++ b/tutor/t922/atom.config.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t922/atom.config.in
-!!! solver  : lavender
+!!! solver  : LAVENDER
 !!! purpose : for tutorial
 !!! author  : yilin wang (qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
