--- a/tutor/t922/solver.ctqmc.in
+++ b/tutor/t922/solver.ctqmc.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t922/solver.ctqmc.in
-!!! solver  : lavender
+!!! solver  : LAVENDER
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
