--- a/tutor/t924/solver.ctqmc.in
+++ b/tutor/t924/solver.ctqmc.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t924/solver.ctqmc.in
-!!! solver  : narcissus
+!!! solver  : NARCISSUS
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
