--- a/tutor/t935/solver.ctqmc.in
+++ b/tutor/t935/solver.ctqmc.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t935/solver.ctqmc.in
-!!! solver  : gardenia
+!!! solver  : GARDENIA
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
