--- a/tutor/t921/atom.config.in
+++ b/tutor/t921/atom.config.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
 !!! source  : t921/atom.config.in
-!!! solver  : begonia
+!!! solver  : BEGONIA
 !!! purpose : for tutorial
 !!! author  : yilin wang (qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
