modify daisy/Makefile, fix the api/lib targets, remove f2py target and pydaisy target, etc

--- a/src/hfqmc/daisy/Makefile
+++ b/src/hfqmc/daisy/Makefile
@@ -3,7 +3,7 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/ctqmc/azalea directory.
+## Makefile for iqist/src/hfqmc/daisy directory.
 ##
 ## Usage
 ## =====
@@ -20,7 +20,7 @@
 ## History
 ## =======
 ##
-## 09/21/2014 by li huang
+## 02/28/2015 by li huang
 ##
 ##
 
@@ -43,7 +43,9 @@ default: all
 
 all: exe
 
-api: hfqmc_api.o
+api:
+	cp ../../api/dapi.mod .
+	cp ../../api/hfqmc_api.o .
 
 cssl:
 	cp ../../common/libMM.a .
@@ -55,19 +57,16 @@ csml:
 	cp ../../common/parser.mod .
 	cp ../../common/linkedlist.mod .
 
+touch:
+	touch hfqmc_main.f90
+
 exe: api cssl csml hfqmc-exe
 hfqmc-exe: $(objects)
 	$(LINKER) $(objects) -o hfqmc $(LFLAGS) $(LIBS)
 
-lib: api cssl csml hfqmc-lib
+lib: api cssl csml touch hfqmc-lib
 hfqmc-lib: $(objects)
 	$(ARCHIVER) libhfqmc.a $(objects)
-
-f2py:
-	fpp -P -DMPY hfqmc_api.f90 > hfqmc_api_py.f90
-
-pydaisy: f2py lib
-	f2py -c --fcompiler=intelem hfqmc_api_py.f90 -m pydaisy -L. -lhfqmc -lMM $(MPIL) $(LIBS)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -75,11 +74,9 @@ pydaisy: f2py lib
 clean:
 	rm -f *.mod
 	rm -f *.o
-	rm -f *.so
 	rm -f hfqmc
 	rm -f libhfqmc.a
 	rm -f libMM.a
-	rm -f hfqmc_api_py.f90
 
 clean-dat:
 	rm -f *.dat
