--- a/working/ctqmc/validation/2e/solver.ctqmc.in
+++ b/working/ctqmc/validation/2e/solver.ctqmc.in
@@ -1,3 +1,10 @@
+!!!-----------------------------------------------------------------------
+!!! source  : 2e/solver.ctqmc.in
+!!! solver  : AZALEA
+!!! purpose : to test ctqmc impurity solver
+!!! author  : li huang (email:huangli712@gmail.com)
+!!!-----------------------------------------------------------------------
+
 isscf = 2
 isbin = 1
 part = 1.0
