--- a/working/ctqmc/validation/3b/atom.config.in
+++ b/working/ctqmc/validation/3b/atom.config.in
@@ -1,5 +1,5 @@
 !!!-----------------------------------------------------------------------
-!!! source  : 2a/atom.config.in
+!!! source  : 3b/atom.config.in
 !!! solver  : BEGONIA, LAVENDER, PANSY, and MANJUSHAKA
 !!! purpose : to test ctqmc impurity solver
 !!! author  : yilin wang (email:qhwyl2006@126.com)
