modify api/Makefile, add support for gfortran

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -37,9 +37,9 @@ all: build_mod
 build_mod: $(mod)
 
 f2py:
-	fpp -P -DMPY ctqmc_api.f90 > ctqmc_api_py.f90
-	fpp -P -DMPY hfqmc_api.f90 > hfqmc_api_py.f90
-	fpp -P -DMPY atomic_api.f90 > atomic_api_py.f90
+	cpp -E -DMPY ctqmc_api.f90 > ctqmc_api_py.f90
+	cpp -E -DMPY hfqmc_api.f90 > hfqmc_api_py.f90
+	cpp -E -DMPY atomic_api.f90 > atomic_api_py.f90
 
 libctqmc:
 	cp ../ctqmc/azalea/libctqmc.a .
@@ -54,7 +54,8 @@ libMM:
 	cp ../common/libMM.a .
 
 pyiqist: f2py libctqmc libMM
-	f2py -c --fcompiler=intelem ctqmc_api_py.f90 -m pyiqist -L. -lctqmc -lMM $(MPIL) $(LIBS)
+	$(F2PY) -c --f90exec=$(F2PYC) -m pyiqist -L. -lctqmc -lMM --link-lapack_opt ctqmc_api_py.f90
+	rm -fr *.dSYM
 
 pydaisy: f2py libhfqmc libMM
 	f2py -c --fcompiler=intelem hfqmc_api_py.f90 -m pydaisy -L. -lhfqmc -lMM $(MPIL) $(LIBS)
