--- a/tutor/t941/entropy.in
+++ b/tutor/t941/entropy.in
@@ -2,7 +2,7 @@
 !!! source  : t941/entropy.in
 !!! solver  : HIBISCUS/entropy
 !!! purpose : for tutorial
-!!! author  : li huang (email:huangli712@gmail.com)
+!!! author  : li huang (email:lihuang.dmft@gmail.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
