--- a/src/ctqmc/gardenia/Makefile
+++ b/src/ctqmc/gardenia/Makefile
@@ -15,7 +15,7 @@
 ##
 ## This building system is designed, created, implemented, and maintained by
 ##
-## Li Huang // email: huangli712@gmail.com
+## Li Huang // email: lihuang.dmft@gmail.com
 ##
 ## History
 ## =======
