--- a/src/ctqmc/azalea/Makefile
+++ b/src/ctqmc/azalea/Makefile
@@ -71,12 +71,18 @@ lib: api cssl csml ctqmc-lib
 ctqmc-lib: $(lib_obj)
 	$(ARCHIVER) libctqmc.a $(lib_obj)
 
+pylib: lib
+	cpp -E -DPYAPI ctqmc_open.f90 > ctqmc_open_py.f90
+	$(F2PY) -c --f90exec=$(F2PYC) -m pyiqist -L. -lctqmc -lMM $(F2PYL) ctqmc_open_py.f90
+	rm -fr *.dSYM ctqmc_open_py.f90
+
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
 
 clean:
 	rm -f *.mod
 	rm -f *.o
+	rm -f *.so
 	rm -f ctqmc
 	rm -f libctqmc.a
 	rm -f libMM.a
