modify .gitignore, fix it

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,9 @@ fort.*
 atom.cix
 test.py
 test.f90
-ctqmc_api_py.f90
-hfqmc_api_py.f90
-atomic_api_py.f90
+ctqmc_open_py.f90
+hfqmc_open_py.f90
+atomic_open_py.f90
 src/ctqmc/*/ctqmc
 src/hfqmc/*/hfqmc
 src/tools/hibiscus/entropy/entropy
