capi/Makefile, fix a typo

--- a/src/capi/Makefile
+++ b/src/capi/Makefile
@@ -3,7 +3,7 @@
 ## Introduction
 ## ============
 ##
-## Makefile for iqist/src/api directory.
+## Makefile for iqist/src/capi directory.
 ##
 ## Usage
 ## =====
